Updated contact page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Escape Velocity by HTML5 UP</title>
+		<title>Abhishek Shastry</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -56,17 +56,51 @@
 					<div class="container">
 
 						<!-- Image -->
-						<div style="display: block;align-items: center;">
-							<i class="icon-c" style="font-size: 50px;color:black;"></i>
-							<i class="icon-cplusplus" style="font-size: 50px;color:black;"></i>
-							<i class="icon-html5-alt" style="font-size: 50px;color:black;"></i>
-							<i class="icon-css3-alt" style="font-size: 50px;color:black;"></i>
-							<i class="icon-javascript-alt" style="font-size: 50px;color:black;"></i>
-							<i class="icon-reactjs" style="font-size: 50px;color:black;"></i>
-							<i class="icon-python" style="font-size: 50px;color:black;"></i>
-							<i class="icon-postgres" style="font-size: 50px;color:black;"></i>
-							<i class="icon-raspberrypi" style="font-size: 50px;color:black;"></i>
-							<i class="fab fa-android" style="font-size: 50px;color:black;"></i>
+						<div class="row">
+							<div style="display: flex;flex-direction: column;text-align: center;">
+								<i class="icon-c" style="font-size: 50px;color:black;"></i>
+								<p>C Programming</p>
+							</div>
+							<div style="display: flex;flex-direction: column;text-align: center;">
+								<i class="icon-cplusplus" style="font-size: 50px;color:black;"></i>
+								<p>C++ Programming</p>
+							</div>
+							<div style="display: flex;flex-direction: column;text-align: center;">
+								<i class="icon-html5-alt" style="font-size: 50px;color:black;"></i>
+								<p>HTML&nbsp;</p>
+							</div>
+							<div style="display: flex;flex-direction: column;text-align: center;">
+								<i class="icon-css3-alt" style="font-size: 50px;color:black;"></i>
+								<p>CSS&nbsp;&nbsp;</p>
+							</div>
+							<div style="display: flex;flex-direction: column;text-align: center;">
+								<i class="icon-javascript-alt" style="font-size: 50px;color:black;"></i>
+								<p>JavaScript&nbsp;&nbsp;</p>
+							</div>
+							<div style="display: flex;flex-direction: column;text-align: center;">
+								<i class="icon-reactjs" style="font-size: 50px;color:black;"></i>
+								<p>&nbsp;&nbsp;React</p>
+							</div>
+							<div style="display: flex;flex-direction: column;text-align: center;">
+								<i class="icon-python" style="font-size: 50px;color:black;"></i>
+								<p>Python</p>
+							</div>
+							<div style="display: flex;flex-direction: column;text-align: center;">
+								<i class="icon-postgres" style="font-size: 50px;color:black;"></i>
+								<p>&nbsp;Postgres</p>
+							</div>
+							<div style="display: flex;flex-direction: column;text-align: center;">
+								<i class="icon-raspberrypi" style="font-size: 50px;color:black;"></i>
+								<p>Raspberry Pi</p>
+							</div>
+							<div style="display: flex;flex-direction: column;text-align: center;">
+								<i class="fab fa-android" style="font-size: 50px;color:black;"></i>
+								<p>Android</p>
+							</div>
+							<div style="display: flex;flex-direction: column;text-align: center;">
+								<i class="icon-git" style="font-size: 50px;color:black;"></i>
+								<p>Git</p>
+							</div>
 						</div>
 					</div>
 				</section>
@@ -125,7 +159,7 @@
 
 								<!-- Contact Form -->
 									<section>
-										<form method="post" action="#">
+										<form method="post" action="https://formspree.io/f/mwkawnjk">
 											<div class="row gtr-50">
 												<div class="col-6 col-12-small">
 													<input type="text" name="name" id="contact-name" placeholder="Name" />
@@ -193,7 +227,7 @@
 						</div>
 						<div id="copyright">
 							<ul>
-								<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; No copyright issues.</li><li>Abhishek Shastry</li>
 							</ul>
 						</div>
 					</div>
