--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<!-- Skills -->
 				<section id="main" class="wrapper style2">
 					<div class="title">Skills</div>
-					<div class="container">
+					<div class="container" style="align-content: center;align-content: center;text-align: justify;">
 
 						<!-- Image -->
 						<div class="row">
