Updated about page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<section id="intro" class="wrapper style1">
 					<div class="title">About me</div>
 					<div class="container">
-						<p class="style1" style="text-align: justify;">Hi I am Abhishek Shastry, a 22 year old Engineer and a Developer living in Udupi, India.
+						<p class="style1" style="text-align: justify;">&emsp; &emsp;Hi I am Abhishek Shastry, a 22 year old Engineer and a Developer living in Udupi, India.
 							I have completed my Bachelor's degree in Electronics and Communication Engineering and currently working as a software engineer at HealthEdge. </p>
 						
 					</div>
