--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 									<a>About me</a>
 								</li>
 								<li><a>Skills</a></li>
-								<li><a>My projects</a></li>
+								<li><a>Projects</a></li>
 								<li><a>Contact</a></li>
 							</ul>
 						</nav>
@@ -53,51 +53,51 @@
 			<!-- Skills -->
 				<section id="main" class="wrapper style2">
 					<div class="title">Skills</div>
-					<div class="container" style="align-content: center;align-content: center;text-align: justify;">
+					<div class="container">
 
 						<!-- Image -->
 						<div class="row">
-							<div style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-c" style="font-size: 50px;color:black;"></i>
-								<p>C Programming</p>
+								<p>C Programming&nbsp;&nbsp;</p>
 							</div>
-							<div style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-cplusplus" style="font-size: 50px;color:black;"></i>
 								<p>C++ Programming</p>
 							</div>
-							<div style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-html5-alt" style="font-size: 50px;color:black;"></i>
 								<p>HTML&nbsp;</p>
 							</div>
-							<div style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-css3-alt" style="font-size: 50px;color:black;"></i>
 								<p>CSS&nbsp;&nbsp;</p>
 							</div>
-							<div style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-javascript-alt" style="font-size: 50px;color:black;"></i>
 								<p>JavaScript&nbsp;&nbsp;</p>
 							</div>
-							<div style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-reactjs" style="font-size: 50px;color:black;"></i>
 								<p>&nbsp;&nbsp;React</p>
 							</div>
-							<div style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-python" style="font-size: 50px;color:black;"></i>
-								<p>Python</p>
+								<p>Python&nbsp;&nbsp;</p>
 							</div>
-							<div style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-postgres" style="font-size: 50px;color:black;"></i>
 								<p>&nbsp;Postgres</p>
 							</div>
-							<div style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-raspberrypi" style="font-size: 50px;color:black;"></i>
 								<p>Raspberry Pi</p>
 							</div>
-							<div style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="fab fa-android" style="font-size: 50px;color:black;"></i>
 								<p>Android</p>
 							</div>
-							<div style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-git" style="font-size: 50px;color:black;"></i>
 								<p>Git</p>
 							</div>
@@ -107,7 +107,7 @@
 
 			<!-- Projects -->
 				<section id="highlights" class="wrapper style3">
-					<div class="title">My Projects</div>
+					<div class="title">Projects</div>
 					<div class="container">
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
