Updated skills page

--- a/index.html
+++ b/index.html
@@ -57,47 +57,47 @@
 
 						<!-- Image -->
 						<div class="row">
-							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-2 col-10-small" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-c" style="font-size: 50px;color:black;"></i>
 								<p>C Programming&nbsp;&nbsp;</p>
 							</div>
-							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-2 col-10-small" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-cplusplus" style="font-size: 50px;color:black;"></i>
 								<p>C++ Programming</p>
 							</div>
-							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-2 col-10-small" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-html5-alt" style="font-size: 50px;color:black;"></i>
 								<p>HTML&nbsp;</p>
 							</div>
-							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-2 col-10-small" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-css3-alt" style="font-size: 50px;color:black;"></i>
 								<p>CSS&nbsp;&nbsp;</p>
 							</div>
-							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-2 col-10-small" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-javascript-alt" style="font-size: 50px;color:black;"></i>
 								<p>JavaScript&nbsp;&nbsp;</p>
 							</div>
-							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-2 col-10-small" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-reactjs" style="font-size: 50px;color:black;"></i>
 								<p>&nbsp;&nbsp;React</p>
 							</div>
-							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-2 col-10-small" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-python" style="font-size: 50px;color:black;"></i>
 								<p>Python&nbsp;&nbsp;</p>
 							</div>
-							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-2 col-10-small" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-postgres" style="font-size: 50px;color:black;"></i>
 								<p>&nbsp;Postgres</p>
 							</div>
-							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-2 col-10-small" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-raspberrypi" style="font-size: 50px;color:black;"></i>
 								<p>Raspberry Pi</p>
 							</div>
-							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-2 col-10-small" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="fab fa-android" style="font-size: 50px;color:black;"></i>
 								<p>Android</p>
 							</div>
-							<div class="col-4 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
+							<div class="col-2 col-10-small" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-git" style="font-size: 50px;color:black;"></i>
 								<p>Git</p>
 							</div>
