--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<div class="container">
 						<div class="row" style="align-items: center;">
 							<div class="col-6 col-12-medium">
-								<img src="images/mypic.jpg" alt="" style="height: 250px;width: 250px;border-radius: 200px;">
+								<img src="images/my_pic.jpg" alt="" style="height: 250px;width: 250px;border-radius: 200px;">
 							</div>
 							<div class="col-6 col-12-medium">
 								<p class="style1" style="text-align: justify;">&emsp; &emsp;Hi I am Abhishek Shastry, a 22 year old Engineer and a Developer living in Udupi, India.
