--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							</div>
 							<div class="col-6 col-12-medium">
 								<p class="style1" style="text-align: justify;">&emsp; &emsp;Hi I am Abhishek Shastry, a 22 year old Engineer and a Developer living in Udupi, India.
-								I have completed my Bachelor's degree in Electronics and Communication Engineering and currently working as a software engineer at HealthEdge. </p>
+								I have completed my Bachelor's degree in Electronics and Communication Engineering and currently working as a software engineer at <a href="https://www.healthedge.com/" target="_blank">HealthEdge</a>. </p>
 							</div>
 					</div>
 					</div>
@@ -80,24 +80,24 @@
 								<p>CSS&nbsp;&nbsp;</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
-								<i class="icon-javascript-alt" style="font-size: 50px;color:black;"></i>
-								<p>JavaScript&nbsp;&nbsp;</p>
+								<i class="icon-javascript-alt" style="font-size: 50px;color:black;margin-left: 3px;"></i>
+								<p>JavaScript&nbsp;</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
-								<i class="icon-reactjs" style="font-size: 50px;color:black;"></i>
-								<p>&nbsp;&nbsp;React</p>
+								<i class="icon-reactjs" style="font-size: 50px;color:black;margin-left: -10px;"></i>
+								<p>React&nbsp;</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
-								<i class="icon-python" style="font-size: 50px;color:black;"></i>
-								<p>Python&nbsp;&nbsp;</p>
+								<i class="icon-python" style="font-size: 50px;color:black;margin-left: 5px;"></i>
+								<p>Python</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-postgres" style="font-size: 50px;color:black;"></i>
-								<p>&nbsp;Postgres</p>
+								<p>Postgres</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
-								<i class="icon-raspberrypi" style="font-size: 50px;color:black;"></i>
-								<p>Raspberry Pi</p>
+								<i class="icon-raspberrypi" style="font-size: 50px;color:black;margin-left: 13px;"></i>
+								<p>&nbsp;Raspberry Pi</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="fab fa-android" style="font-size: 50px;color:black;"></i>
@@ -121,10 +121,7 @@
 									<h3><a>Micro Weather Station</a></h3>
 									<p style="text-align: justify;"> &emsp; &emsp;Micro weather station is a system which measures the environmental variables and it is 
 										transferred to server where the computations are made and displays the result in web 
-										page or mobile applications. The sole purpose of micro weather station is to gather/collect 
-										major weather attributes like temperature, humidity, soil moisture, Ultra-Violet (UV) radiation, 
-										air pressure and air quality at remote location with most effective and cost-efficient manner 
-										with the help of micro weather station equipment. This uses multiple micro weather stations 
+										page or mobile applications. This uses multiple micro weather stations 
 										and aggregates the data provided by multiple data collection points in real time.</p>
 									<ul class="actions">
 										<li><a href="#" class="button style1">Learn More</a></li>
