--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Abhishek Shastry</title>
+		<title>Abhishek Shas3K</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" href="images/tab_icon.png"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!-- icons -->
 		<link rel="stylesheet" href="assets\css\font-mfizz-2.4.1/font-mfizz.css">
