--- a/index.html
+++ b/index.html
@@ -205,9 +205,10 @@
 												<section>
 													<h3 class="icon solid fa-comment">Social</h3>
 													<p style="margin-top: 20px;">
-														<a href="https://www.linkedin.com/in/abhi-m-shas3-k/" class="icon brands fa-linkedin" style="font-size: 30px;padding-right: 20px;"><span class="label">Linkedin</span></a>
-														<a href="https://www.instagram.com/abhi_shas3k/" class="icon brands fa-instagram" style="font-size: 30px;padding-right: 20px;"><span class="label">Instagram</span></a>
-														<a href="https://github.com/AbhishekMShastryK" class="icon brands fa-github" style="font-size: 30px;"><span class="label">GitHub</span></a>
+														<a href="https://www.linkedin.com/in/abhi-m-shas3-k/" class="icon brands fa-linkedin" style="font-size: 20px;margin-right: 20px;" target="_blank"><span class="label">Linkedin</span></a>
+														<a href="https://www.instagram.com/abhi_shas3k/" class="icon brands fa-instagram" style="font-size: 20px;margin-right: 20px;" target="_blank"><span class="label">Instagram</span></a>
+														<a href="https://github.com/AbhishekMShastryK" class="icon brands fa-github" style="font-size: 20px;margin-right: 20px;" target="_blank"><span class="label" >GitHub</span></a>
+														<a href="https://twitter.com/abhi_m_shas3" class="icon brands fa-twitter" style="font-size: 20px;" target="_blank"><span class="label" >Twitter</span></a>
 													</p>
 												</section>
 											</div>
