--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<img src="images/my_pic.jpg" alt="" style="height: 250px;width: 250px;border-radius: 200px;">
 							</div>
 							<div class="col-6 col-12-medium">
-								<p class="style1" style="text-align: justify;">&emsp; &emsp;Hi I am Abhishek Shastry, a 22 year 
+								<p class="style1" style="text-align: center;">&emsp; &emsp;Hi I am Abhishek Shastry, a 22 year 
 									old Electronics and Communication Engineer passionate to learn, explore and build a successful 
 									career in engineering field which involves implementing knowledge and skills that i have gained from academics, 
 									internships and projects. Now i am currently working as a software engineer at <a href="https://www.healthedge.com/" target="_blank">HealthEdge</a>. </p>
