--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								</li>
 								<li><a href="#main">Skills</a></li>
 								<li><a href="#highlights">Projects</a></li>
-								<li><a href="#">Resume</a></li>
+								<li><a href="resume/shastry_resume.pdf" download>Resume</a></li>
 								<li><a href="#footer">Contact</a></li>
 							</ul>
 						</nav>
