Updated skills styles

--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-html5-alt" style="font-size: 75px;color:black;"></i>
-								<p>HTML&nbsp;</p>
+								<p>HTML&nbsp;&nbsp;</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-css3-alt" style="font-size: 75px;color:black;"></i>
-								<p>CSS&nbsp;&nbsp;</p>
+								<p>CSS&nbsp;&nbsp;&nbsp;</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-javascript-alt" style="font-size: 75px;color:black;margin-left: 3px;"></i>
-								<p>JavaScript&nbsp;</p>
+								<p>JavaScript&nbsp;&nbsp;&nbsp;</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
 								<i class="icon-reactjs" style="font-size: 75px;color:black;margin-left: -10px;"></i>
