Updated skills styles

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<!-- Image -->
 						<div class="row">
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
-								<i class="icon-c" style="font-size: 75px;color:black;"></i>
+								<i class="icon-c" style="font-size: 75px;color:black;margin-left: 8px;"></i>
 								<p>C Programming&nbsp;&nbsp;</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
