Updated resume page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								</li>
 								<li><a href="#main">Skills</a></li>
 								<li><a href="#highlights">Projects</a></li>
-								<li><a href="resume/shastry_resume.pdf" download>Resume</a></li>
+								<li><a href="#resume">Resume</a></li>
 								<li><a href="#footer">Contact</a></li>
 							</ul>
 						</nav>
@@ -190,6 +190,16 @@
 					</div>
 				</section>
 
+				<!-- Resume -->
+				<section id="resume" class="wrapper style2">
+					<div class="title">Resume</div>
+					<div class="container" style="text-align: center;">
+						<div>
+						<a href="resume/shastry_resume.pdf" download class='btn'>Download</a>
+					</div>
+					</div>
+				</section>
+
 			<!-- Footer -->
 				<section id="footer" class="wrapper">
 					<div class="title">Contact</div>
@@ -280,9 +290,6 @@
 					<img src="images/india_skyline.jpg" alt="" style="max-width: 100%;height: auto;" >
 				</div>
 				</section>
-				
-				
-
 		</div>
 
 		<!-- Scripts -->
@@ -292,6 +299,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/Download.js"></script>
 
 	</body>
 </html>
