Updated resume page

--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 				<section id="resume" class="wrapper style2">
 					<div class="title">Resume</div>
 					<div class="container" style="text-align: center;">
-						<div>
-						<a href="resume/shastry_resume.pdf" download class='btn'>Download</a>
-					</div>
+						<ul class="actions">
+							<li><a href="resume/shastry_resume.pdf" class="button style1" download >Download</a></li>
+						</ul>
 					</div>
 				</section>
 
@@ -299,7 +299,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="assets/js/Download.js"></script>
 
 	</body>
 </html>
