Updated resume page

--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
 				</section>
 
 				<!-- Resume -->
-				<section id="resume" class="wrapper style2">
+				<section id="main" class="wrapper style2">
 					<div class="title">Resume</div>
 					<div class="container" style="text-align: center;">
-						<ul class="actions">
-							<li><a href="resume/shastry_resume.pdf" class="button style1" download >Download</a></li>
-						</ul>
+						<div>
+						<a href="resume/shastry_resume.pdf" download class='btn'>Download</a>
+					</div>
 					</div>
 				</section>
 
@@ -299,6 +299,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/Download.js"></script>
 
 	</body>
 </html>
