Updated resume page

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 				</section>
 
 				<!-- Resume -->
-				<section id="main" class="wrapper style2">
+				<section id="resume" class="wrapper style2">
 					<div class="title">Resume</div>
 					<div class="container" style="text-align: center;">
 						<div>
