Updated contact details

--- a/index.html
+++ b/index.html
@@ -255,23 +255,6 @@
 													</p>
 												</section>
 											</div>
-											<div class="col-6 col-12-small">
-												<section>
-													<h3 class="icon solid fa-envelope">Email</h3>
-													<p>
-														abhishekshastry1999@gmail.com
-													</p>
-		
-												</section>
-											</div>
-											<div class="col-6 col-12-small">
-												<section>
-													<h3 class="icon solid fa-phone">Phone</h3>
-													<p>
-														(+91) 8310152882 / 9483998145
-													</p>
-												</section>
-											</div>
 										</div>
 									</section>
 
@@ -299,7 +282,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="assets/js/Download.js"></script>
+			<script src="assets/js/downloadButton.js"></script>
 
 	</body>
 </html>
