Updated download button

--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 				<section id="resume" class="wrapper style2">
 					<div class="title">Resume</div>
 					<div class="container" style="text-align: center;">
-						<div>
-						<a href="resume/shastry_resume.pdf" download class='btn'>Download</a>
-					</div>
+							<a href="resume/shastry_resume.pdf" download style="text-decoration: none">
+							<button1 class="btn" ><i class="fas fa-download"></i>&nbsp;&nbsp;Download</button1>
+						</a>
 					</div>
 				</section>
 
@@ -282,7 +282,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<script src="assets/js/downloadButton.js"></script>
 
 	</body>
 </html>
