Updated download button

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								<p>React&nbsp;</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
-								<i class="icon-python" style="font-size: 75px;color:black;margin-left: 5px;"></i>
+								<i class="icon-python" style="font-size: 75px;color:black;margin-left: 10px;"></i>
 								<p>Python</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
@@ -100,11 +100,11 @@
 								<p>Postgres</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
-								<i class="icon-raspberrypi" style="font-size: 75px;color:black;margin-left: 13px;"></i>
+								<i class="icon-raspberrypi" style="font-size: 75px;color:black;margin-left: 18px;"></i>
 								<p>&nbsp;Raspberry Pi</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
-								<i class="icon-git" style="font-size: 75px;color:black;"></i>
+								<i class="icon-git" style="font-size: 75px;color:black;margin-left: 3px;"></i>
 								<p>Git</p>
 							</div>
 							<div class="col-2 col-12-medium" style="display: flex;flex-direction: column;text-align: center;">
@@ -193,8 +193,8 @@
 				<!-- Resume -->
 				<section id="resume" class="wrapper style2">
 					<div class="title">Resume</div>
-					<div class="container" style="text-align: center;">
-							<a href="resume/shastry_resume.pdf" download style="text-decoration: none">
+					<div class="container" style="text-align: center;margin-top: 30px;">
+							<a href="resume/shastry_resume.pdf" download style="color: inherit;text-decoration: none;">
 							<button1 class="btn" ><i class="fas fa-download"></i>&nbsp;&nbsp;Download</button1>
 						</a>
 					</div>
