--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
 					</div>
 				</section>
 
-				<!-- Hobbies -->
+				<!-- Interests -->
 				<section id="highlights" class="wrapper style1">
-					<div class="title">Hobbies</div>
+					<div class="title">Interests</div>
 					<div class="container">
 						<div class="row aln-center">
 							<div class="col-4 col-12-medium">
