--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<div class="col-6 col-12-medium">
 								<p class="style1" style="text-align: center;">Hi I am Abhishek Shastry, an Engineer passionate 
 									to learn, explore and build a successful 
-									career in engineering field. Now i am currently working as a software engineer at <a href="https://www.healthedge.com/" target="_blank">HealthEdge</a>. </p>
+									career in engineering field. Now i am currently pursuing master's degree in computer science at <a href="https://uiowa.edu/" target="_blank">University of Iowa</a>. </p>
 							</div>
 					</div>
 					</div>
