Updated project url

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 										mobile app (more details in view more section). This system uses multiple micro weather stations 
 										and aggregates the data provided by multiple data collection points in real time.</p>
 									<ul class="actions">
-										<li><a href="https://mws-abhishas3.netlify.app/" class="button style1" target="_blank">View More</a></li>
+										<li><a href="https://mws-project.netlify.app/" class="button style1" target="_blank">View More</a></li>
 									</ul>
 								</section>
 							</div>
