updated resume and insta link

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 													<h3 class="icon solid fa-comment">Social</h3>
 													<p style="margin-top: 20px;">
 														<a href="https://www.linkedin.com/in/abhishekMShastryK" class="icon brands fa-linkedin" style="font-size: 20px;margin-right: 20px;" target="_blank"><span class="label">Linkedin</span></a>
-														<a href="https://www.instagram.com/abhi_shas3k/" class="icon brands fa-instagram" style="font-size: 20px;margin-right: 20px;" target="_blank"><span class="label">Instagram</span></a>
+														<a href="https://www.instagram.com/abhi.shastry/" class="icon brands fa-instagram" style="font-size: 20px;margin-right: 20px;" target="_blank"><span class="label">Instagram</span></a>
 														<a href="https://github.com/AbhishekMShastryK" class="icon brands fa-github" style="font-size: 20px;margin-right: 20px;" target="_blank"><span class="label" >GitHub</span></a>
 														<a href="https://twitter.com/abhi_m_shas3" class="icon brands fa-twitter" style="font-size: 20px;" target="_blank"><span class="label" >Twitter</span></a>
 													</p>
