updated about tag

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1>Abhishek M Shastry K</h1>
-							<p>Engineer • Developer • Proud Indian</p>
+							<p>Engineer • Developer</p>
 						</div>
 
 					<!-- Nav -->
