Added UI changes

--- a/index.html
+++ b/index.html
@@ -342,26 +342,17 @@
 										</p>
 									</section>
 								</div>
-								<div>
+								<div class="col-6 col-12-small">
 									<section>
 										<h3 class="icon solid fa-comment">Social</h3>
-										<p style="margin-top: 20px;">
-											<a href="https://www.linkedin.com/in/abhishekMShastryK"
-												class="icon brands fa-linkedin"
-												style="font-size: 20px;margin-right: 20px;" target="_blank"><span
-													class="label">Linkedin</span></a>
-											<a href="https://www.instagram.com/abhi.shastry/"
-												class="icon brands fa-instagram"
-												style="font-size: 20px;margin-right: 20px;" target="_blank"><span
-													class="label">Instagram</span></a>
-											<a href="https://github.com/AbhishekMShastryK" class="icon brands fa-github"
-												style="font-size: 20px;margin-right: 20px;" target="_blank"><span
-													class="label">GitHub</span></a>
-											<a href="https://twitter.com/abhi_m_shas3" class="icon brands fa-twitter"
-												style="font-size: 20px;" target="_blank"><span
-													class="label">Twitter</span></a>
-										</p>
+										<div class="social-icons">
+											<a href="https://www.linkedin.com/in/abhishekMShastryK" class="icon brands fa-linkedin" target="_blank" aria-label="LinkedIn"></a>
+											<a href="https://www.instagram.com/abhi.shastry/" class="icon brands fa-instagram" target="_blank" aria-label="Instagram"></a>
+											<a href="https://github.com/AbhishekMShastryK" class="icon brands fa-github" target="_blank" aria-label="GitHub"></a>
+											<a href="https://twitter.com/abhi_m_shas3" class="icon brands fa-twitter" target="_blank" aria-label="Twitter"></a>
+										</div>
 									</section>
+									
 								</div>
 							</div>
 						</section>
