Added UI changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 			<!-- Logo -->
 			<div id="logo">
-				<h1>Abhishek M Shastry K</h1>
+				<h1>Abhishek Shastry</h1>
 				<p><span id="typing-text"></span></p> <!-- Animated typing effect -->
 			</div>
 
