Added Experience Section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               <a href="#intro">About me</a>
             </li>
             <li><a href="#main">Skills</a></li>
+			<li><a href="#experience">Experience</a></li>
             <li><a href="#highlights">Projects</a></li>
             <li><a href="#resume">Resume</a></li>
             <li><a href="#footer">Contact</a></li>
