Added text changes under experience section

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                           >HealthEdge Software</span
                         >
                         <span class="experience-job-title"
-                          >Software Developer</span
+                          >Software Engineer (Student Intern for six months)</span
                         >
                       </div>
                       <div class="experience-right">
