--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a href="#intro">About me</a>
             </li>
             <li><a href="#main">Skills</a></li>
-			<li><a href="#experience">Experience</a></li>
+            <li><a href="#experience">Experience</a></li>
             <li><a href="#highlights">Projects</a></li>
             <li><a href="#resume">Resume</a></li>
             <li><a href="#footer">Contact</a></li>
@@ -471,7 +471,8 @@
                           >HealthEdge Software</span
                         >
                         <span class="experience-job-title"
-                          >Software Engineer (Student Intern for six months)</span
+                          >Software Engineer (Student Intern for six
+                          months)</span
                         >
                       </div>
                       <div class="experience-right">
@@ -685,7 +686,7 @@
         <div class="title">Resume</div>
         <div class="container" style="text-align: center; margin-top: 30px">
           <a
-            href="resume/AbhishekMShastryK_v5.2.pdf"
+            href="resume/AbhishekMShastryK_v5.3.pdf"
             class="button style1"
             target="_blank"
             >View Resume</a
