--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!doctype html>
-<!--
-	Escape Velocity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
   <head>
     <title>Abhishek's Portfolio</title>
@@ -643,7 +638,7 @@
       </section>
 
       <!-- Interests -->
-      <section id="highlights" class="wrapper style1">
+      <section id="interests" class="wrapper style1">
         <div class="title">Life Outside Work</div>
         <div class="container">
           <div class="row aln-center">
