Updated ui for project and interest section

--- a/index.html
+++ b/index.html
@@ -511,128 +511,78 @@
       <section id="highlights" class="wrapper style3">
         <div class="title">Projects</div>
         <div class="container">
-          <div class="row aln-center">
-            <div class="col-4 col-12-medium">
-              <section class="highlight project-box">
-                <h3><a>Micro Weather Station</a></h3>
-                <p>
-                  Micro weather station is a system which measures the
-                  environmental variables and transfers the data to a server
-                  where computations are made and the result is displayed in a
-                  mobile app. This system uses multiple micro weather stations
-                  and aggregates data from various collection points in real
-                  time.
-                </p>
-                <ul class="actions">
-                  <li>
-                    <a
-                      href="https://mws-project.netlify.app/"
-                      class="button style1"
-                      target="_blank"
-                      >View More</a
-                    >
-                  </li>
-                </ul>
-              </section>
-            </div>
+          <div class="grid-project">
+            <a
+              href="https://mws-project.netlify.app/"
+              class="project-tile"
+              target="_blank"
+            >
+              <h3>Micro Weather Station</h3>
+              <p>
+                A system that measures environmental variables and aggregates
+                real-time data from multiple collection points.
+              </p>
+            </a>
 
-            <div class="col-4 col-12-medium">
-              <section class="highlight project-box">
-                <h3><a>Emotion Analysis</a></h3>
-                <p>
-                  The objective of this project is to develop a deep learning
-                  algorithm or model to detect different types of emotions
-                  contained in a collection of English sentences or a large
-                  paragraph. The result is presented in a table with performance
-                  metrics like accuracy and precision.
-                </p>
-                <ul class="actions">
-                  <li>
-                    <a
-                      href="https://github.com/AbhishekMShastryK/EmotionAnalysis/blob/main/Project_Report.pdf"
-                      class="button style1"
-                      target="_blank"
-                      >View More</a
-                    >
-                  </li>
-                </ul>
-              </section>
-            </div>
+            <a
+              href="https://github.com/AbhishekMShastryK/Automatic-Speech-Recognition"
+              class="project-tile"
+              target="_blank"
+            >
+              <h3>Automatic Speech Recognition</h3>
+              <p>
+                Built an ASR system with input processing, forced alignment, and
+                CTC-based speech-to-text conversion.
+              </p>
+            </a>
 
-            <div class="col-4 col-12-medium">
-              <section class="highlight project-box">
-                <h3><a>Voting Application</a></h3>
-                <p>
-                  This voting application is a web-based system designed to
-                  manage user profiles, authentication, and voting processes. It
-                  caters to different user roles including Voters, Poll
-                  Managers, and Administrators and aims to provide a secure and
-                  efficient election platform while maintaining user privacy and
-                  data integrity.
-                </p>
-                <ul class="actions">
-                  <li>
-                    <a
-                      href="https://github.com/AbhishekMShastryK/voting-application"
-                      class="button style1"
-                      target="_blank"
-                      >View More</a
-                    >
-                  </li>
-                </ul>
-              </section>
-            </div>
+            <a
+              href="https://github.com/AbhishekMShastryK/EmotionAnalysis/blob/main/Project_Report.pdf"
+              class="project-tile"
+              target="_blank"
+            >
+              <h3>Emotion Analysis</h3>
+              <p>
+                A machine learning model to detect emotions in English text,
+                with accuracy and precision metrics.
+              </p>
+            </a>
 
-            <div class="col-4 col-12-medium">
-              <section class="highlight project-box">
-                <h3><a>Hospital Management System</a></h3>
-                <p>
-                  This project is a hospital management system with a
-                  microservices architecture, featuring key services such as
-                  Validation, Patient Information Fetch, Appointment Fetch,
-                  Scheduling, and FHIR Fetch. It uses a MySQL database and
-                  includes scripts for independent service management. The FHIR
-                  Fetch service converts unorganized patient data to the FHIR
-                  standard for efficient and secure healthcare data exchange.
-                </p>
-                <ul class="actions">
-                  <li>
-                    <a
-                      href="https://github.com/AbhishekMShastryK/hospital-management-system"
-                      class="button style1"
-                      target="_blank"
-                      >View More</a
-                    >
-                  </li>
-                </ul>
-              </section>
-            </div>
+            <a
+              href="https://github.com/AbhishekMShastryK/voting-application"
+              class="project-tile"
+              target="_blank"
+            >
+              <h3>Voting Application</h3>
+              <p>
+                A web-based voting system with user authentication, role-based
+                access, and data security.
+              </p>
+            </a>
 
-            <div class="col-4 col-12-medium">
-              <section class="highlight project-box">
-                <h3><a>CDCL Solver</a></h3>
-                <p>
-                  This project implements a Conflict-Driven Clause Learning
-                  (CDCL) SAT solver with two watched literals for Boolean
-                  satisfiability problems. It incorporates modern techniques
-                  like unit propagation, clause learning, non-chronological
-                  backtracking, an arithmetic restart policy, and the VSIDS
-                  heuristic. The implementation is optimized for performance and
-                  analyzed with SAT and UNSAT cases to identify improvement
-                  areas.
-                </p>
-                <ul class="actions">
-                  <li>
-                    <a
-                      href="https://github.com/AbhishekMShastryK/CDCL-Solver"
-                      class="button style1"
-                      target="_blank"
-                      >View More</a
-                    >
-                  </li>
-                </ul>
-              </section>
-            </div>
+            <a
+              href="https://github.com/AbhishekMShastryK/hospital-management-system"
+              class="project-tile"
+              target="_blank"
+            >
+              <h3>Hospital Management System</h3>
+              <p>
+                A microservices-based hospital management system with FHIR
+                support for secure data exchange.
+              </p>
+            </a>
+
+            <a
+              href="https://github.com/AbhishekMShastryK/CDCL-Solver"
+              class="project-tile"
+              target="_blank"
+            >
+              <h3>CDCL Solver</h3>
+              <p>
+                An optimized CDCL SAT solver with modern techniques like clause
+                learning and VSIDS heuristic.
+              </p>
+            </a>
           </div>
         </div>
       </section>
@@ -641,37 +591,33 @@
       <section id="interests" class="wrapper style1">
         <div class="title">Life Outside Work</div>
         <div class="container">
-          <div class="row aln-center">
-            <div class="col-4 col-12-medium">
-              <section class="highlight interest-box">
-                <h3><a>Travelling</a></h3>
-                <img
-                  src="images/travelling.jpeg"
-                  alt="Travelling"
-                  class="interest-image"
-                />
-              </section>
-            </div>
-            <div class="col-4 col-12-medium">
-              <section class="highlight interest-box">
-                <h3><a>Sports</a></h3>
-                <img
-                  src="images/sports.jpeg"
-                  alt="Philately and Numismatics"
-                  class="interest-image"
-                />
-              </section>
-            </div>
-            <div class="col-4 col-12-medium">
-              <section class="highlight interest-box">
-                <h3><a>PC Gaming</a></h3>
-                <img
-                  src="images/pc_gaming.jpeg"
-                  alt="PC Gaming"
-                  class="interest-image"
-                />
-              </section>
-            </div>
+          <div class="grid-interest">
+            <a class="interest-tile">
+              <img
+                src="images/travelling.jpeg"
+                alt="Travelling"
+                class="interest-image"
+              />
+              <h3>Travelling</h3>
+            </a>
+
+            <a class="interest-tile">
+              <img
+                src="images/sports.jpeg"
+                alt="Sports"
+                class="interest-image"
+              />
+              <h3>Sports</h3>
+            </a>
+
+            <a class="interest-tile">
+              <img
+                src="images/pc_gaming.jpeg"
+                alt="PC Gaming"
+                class="interest-image"
+              />
+              <h3>PC Gaming</h3>
+            </a>
           </div>
         </div>
       </section>
