--- a/index.html
+++ b/index.html
@@ -525,6 +525,17 @@
             </a>
 
             <a
+              href="https://groovon-chat-app.vercel.app/"
+              class="project-tile"
+              target="_blank"
+            >
+              <h3>Groovon - Group Chat Application</h3>
+              <p>
+                A real-time chat application using React and Firebase with social login, thread-based messaging, and avatars.
+              </p>
+            </a>
+
+            <a
               href="https://github.com/AbhishekMShastryK/Automatic-Speech-Recognition"
               class="project-tile"
               target="_blank"
